# authentication-app

./: .gitignore  CMakeLists.txt  README.md
include/: auth.h  auth_validator.h  encryption.h  http_handler.h  user_details.h  utils.h
src/: auth.c  auth_validator.c  encryption.c  http_handler.c  main.c  user_details.c  utils.c
